# smtt

./: CMakeLists.txt
include/smtt/: static_matrix_type_traits.hpp
src/: smtt_demo.cpp  static_matrix_type_traits.cpp
test/: test_main.cpp  test_smtt.cpp  test_smtt_detail.cpp  test_smtt_dimension.cpp  testmain.cpp  testsmtt.cpp  testsmttdetail.cpp
